Fix spacing between keys.

--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@
 .App-Restart > button {
   border-radius: 8px;
   padding: 6px 12px;
-	background: linear-gradient(to bottom, #ff6600 0%, #ff6600 100%);
+  background: linear-gradient(to bottom, #ff6600 0%, #ff6600 100%);
   font-weight: 300;
   font-size: .6em;
   border: none;
@@ -104,10 +104,6 @@
   text-decoration: none;
   color: #fff;
   background: linear-gradient(to bottom, #000 0%, #000 100%);
-}
-
-.App-VirtualKeyboard .VirtualKeyboard {
-  width: 100%;
 }
 
 .App-SideBySide {
