--- a/src/AttemptsLeft.css
+++ b/src/AttemptsLeft.css
@@ -2,3 +2,7 @@
   font-style: italic;
   font-size: 0.9em;
 }
+
+.AttemptsLeft-Number {
+  color: #ff6600;
+}
